v1.5
2015/09/27
- 增加 $.vmodel.get() 第三個參數為回調函數 (callback)
- 增加視覺化，綁定在實際跟元素的自訂屬性

v1.4
2015/09/17
- 增加倉儲命可使用 -- 作為開頭，用來當作定位點概念。
- $.vmodel.get() 排序顯示所有倉儲內容
- autoload 若使用 function ，可以不必回傳陣列
- $.vmodel.delete() 不指定倉儲名稱可以清空所有倉儲

v1.3
2015/07/10
- 添加 $.vmodel.delete 方法
- this.root    會得到 $(selector);
- this.select  會得到 $(selector) 中的 selector

v1.2.2
2015/07/10
- 修正當選擇器指定 $(window) 與 $(document) 可使用 this.root 取得
- 修正倉儲命名重複時的覆蓋問題，目前改為不可重複命名。
- 修正原 $.vmodel.storage 倉儲為私有, 改為 var storage 。外部呼叫倉儲僅可透過 $.vmodel.get() 取得。
- 修正原 $.vmodel.local 為私有，改為 var local。

V 1.2 
2015/06/22
- 添加 $.vmodel.api 方法
- 內部全域修正
- vmodel() 添加了第二個參數布林值。決定是否要執行定義。總共有 3 個參數 
  $(selector).vmodel(模型名稱, 是否執行, 匿名方法)
- 增加範例說明