@@ -1,0 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="../src/jquery.vmodel.js"></script>
+    <!-- <script src="01.js"></script> -->
+    <!-- <script src="02.js"></script> -->
+    <!-- <script src="03.js"></script> -->
+    <!-- <script src="04.js"></script> -->
+    <!-- <script src="06.js"></script> -->
+    <!-- <script src="08.js"></script> -->
+    <script src="09.js"></script>
+    <div class="content">
+    </div>
+</body>
+</html>
