@@ -2,6 +2,9 @@ v1.5
 2015/09/27
 - 增加 $.vmodel.get() 第三個參數為回調函數 (callback)
 - 增加視覺化，綁定在實際跟元素的自訂屬性
+- 增加 $.vmodel.struct() 可以取得結構化資訊
+- 擴增內部屬性 vname
+
 
 v1.4
 2015/09/17
